[gd_scene load_steps=8 format=3 uid="uid://cha5glu2f05ci"]

[ext_resource type="Theme" uid="uid://db51ncs4eb7e0" path="res://assets/ui-theme.tres" id="2"]
[ext_resource type="Script" path="res://src/gui/menu/menu.gd" id="3"]
[ext_resource type="PackedScene" path="res://src/gui/credits_screen/credits_screen.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://deqfgbwvacuil" path="res://assets/music/Super_Game_Music_-_Strange_Green_Planet_(Loop).ogg" id="6"]
[ext_resource type="PackedScene" path="res://src/gui/configs_screen/configs_screen.tscn" id="7"]
[ext_resource type="Script" path="res://src/gui/configs_screen/configs_screen.gd" id="8"]

[sub_resource type="GDScript" id="4"]
script/source = "extends Label


"

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Header" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
offset_bottom = -339.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Header"]
layout_mode = 2
text = "Into The Wild"

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -69.0
offset_right = 100.0
offset_bottom = 173.0
alignment = 1

[node name="StartButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../ExitButton")
theme = ExtResource("2")
text = "Start (Test Level)"

[node name="Level1Button" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../ExitButton")
text = "Level 1"

[node name="Level2Button" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../ExitButton")
text = "Level 2"

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../StartButton")
text = "Credits"

[node name="ExitButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../CreditsButton")
text = "Exit"

[node name="Version" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -67.0
offset_right = 591.0
offset_bottom = -17.0
alignment = 2

[node name="GameVersion" type="Label" parent="Version"]
layout_mode = 2
text = "<x.y.z>"

[node name="GodotVersion" type="Label" parent="Version"]
layout_mode = 2
text = "<GodotVersion>"
script = SubResource("4")

[node name="Authors" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -90.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MadeByLabel" type="Label" parent="Authors"]
layout_mode = 2
text = "Game by:"

[node name="Developer1" type="Label" parent="Authors"]
layout_mode = 2
text = "jayypluss"

[node name="Developer2" type="Label" parent="Authors"]
visible = false
layout_mode = 2
text = "Developer 2"

[node name="CreditsScreen" parent="." instance=ExtResource("5")]

[node name="ConfigsScreen" parent="." instance=ExtResource("7")]
script = ExtResource("8")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -20.0

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/Level1Button" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="ButtonsContainer/Level2Button" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
